--- a/index.html
+++ b/index.html
@@ -59,6 +59,28 @@
         </div>
     </div>
 
+    <div class="month-selector">
+        <h2>Seleção de Mês</h2>
+        <div class="month-controls">
+            <select id="monthSelect">
+                <option value="0">Janeiro</option>
+                <option value="1">Fevereiro</option>
+                <option value="2">Março</option>
+                <option value="3">Abril</option>
+                <option value="4">Maio</option>
+                <option value="5">Junho</option>
+                <option value="6">Julho</option>
+                <option value="7">Agosto</option>
+                <option value="8">Setembro</option>
+                <option value="9">Outubro</option>
+                <option value="10">Novembro</option>
+                <option value="11">Dezembro</option>
+            </select>
+            <input type="number" id="yearInput" min="2000" max="2100" step="1">
+            <button onclick="updateMonth()">Atualizar</button>
+        </div>
+    </div>
+
     <!-- Resumo financeiro -->
     <div class="summary">
         <div class="summary-item">
