--- a/index.html
+++ b/index.html
@@ -104,12 +104,12 @@
             </div>
         </div>
     </div>
-    <script src="script.js"></script>
     <!-- Firebase SDK -->
 <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
 
-    <!-- Bootstrap JS e dependências -->
+<!-- Seu arquivo JavaScript -->
+<script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
