--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +10,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
   <div class="container mt-5">
     <h1 class="text-center mb-4">Gerenciador Financeiro Doméstico</h1>
@@ -80,6 +82,29 @@
         </div>
       </div>
     </div>
+
+    <!-- Tabela de Limites por Categoria -->
+    <div class="card mb-4">
+      <div class="card-header">
+        <h5 class="card-title">Limites e Gastos por Categoria</h5>
+      </div>
+      <div class="card-body">
+        <table class="table table-bordered">
+          <thead class="thead-light">
+            <tr>
+              <th>Categoria</th>
+              <th>Limite Mensal</th>
+              <th>Gasto Atual</th>
+              <th>Saldo Restante</th>
+            </tr>
+          </thead>
+          <tbody id="categoryTableBody">
+            <!-- Conteúdo será preenchido via JavaScript -->
+          </tbody>
+        </table>
+      </div>
+    </div>
+
     <!-- Lista de Despesas -->
     <div class="card">
       <div class="card-header">
@@ -110,4 +135,5 @@
   <script src="script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
