--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@
                   <option value="Streaming">Streaming</option>
                   <option value="Barbeiro">Barbeiro</option>
                   <option value="Lazer">Lazer</option>
+                  <option value="Investimento">Investimento</option>
+                  <option value="Outros">Lazer</option>
                 </select>
               </div>
               <button type="submit" class="btn btn-primary">Adicionar Despesa</button>
